<resources>
    <string name="app_name">OpeNoise</string>

    <!-- MAIN ACTIVITY STRINGS -->
    <string name="StartingTimeRunning"></string>
    <string name="DurationTimeRunning"></string>
    <string name="ButtonRunning">RESET</string>

    <string name="LMax_label">LAMax</string>
    <string name="LAeqTimeDisplay_label">LAeq</string>
    <string name="LMin_label">LAMin</string>
    <string name="LMax">0</string>
    <string name="LAeqTimeDisplay">0</string>
    <string name="LMin">0</string>
    <string name="LAeqRunning_label">LAeq(t)</string>
    <string name="LAeqRunning"></string>

    <string name="level">0</string>
    <string name="level_label"></string>
    <string name="level_label_dBA">dB(A)</string>

    <string name="StartingTimeLog"></string>
    <string name="DurationTimeLog"></string>
    <string name="StartingTimeLogText">You are not saving data</string>
    <string name="DurationTimeLogText">Sampling:</string>

    <!-- ACTION BAR STRINGS -->
    <string name="action_info">About</string>
    <string name="action_log_files">Log files</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>

    <!-- SETTINGS ACTIVITY STRINGS -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>

    <!-- LOG FILES LIST ACTIVITY STRINGS -->
    <string name="title_activity_log_files_list">Log files list</string>

    <!-- LOG FILES READ ACTIVITY STRINGS -->
    <string name="title_activity_log_files_read">Log file read</string>
    <string name="ButtonLogFileTop">Top</string>
    <string name="ButtonLogFileBottom">Bottom</string>
    <string name="ButtonLogFileLeft">Left</string>
    <string name="ButtonLogFileRight">Right</string>

    <!-- INFO ACTIVITY STRINGS -->
    <string name="title_activity_info">About</string>
    <string name="Openoise">OpeNoise</string>
    <string name="OpenoiseText">OpeNoise provides real-time A-weighted sound pressure level measurement.\nFunctions:\n - minimum and maximum level\n - third octave and FFT analysis\n - log file storage\n - sampling time setting\n - gain setting
</string>
    <string name="TermsOfUse">Term of use</string>
    <string name="TermsOfUseText1">This app is not intended for professional use, it does not necessarily guarantee an accurate noise measurement.
        \nSince each device has a different response to noise, a comparison with a professional noise level meter in the measurement dynamic range is required.
        \nThe utilization of the app requires adequate technical knowledge and skill; an extemporary measurement might not be correct.
</string>
    <string name="SetTheGain">Set the Gain</string>
    <string name="SetTheGainText">Gain setting is necessary to use this app correctly. To set the Gain you have to check measured data with the actual value.\nBe careful that Gain setting is lost after each update (and reset to 0 dB).
 </string>
    <string name="InfoLog">Log file</string>
    <string name="InfoLogText">This app can save noise data in a log file.
\nPush the \'START LOG\' button to start saving data.
\nFiles are saved in the directory \'openoise\' allocated in the local memory (not in external SD).
\n\n
</string>

    <!-- CREDITS ACTIVITY STRINGS -->
    <string name="title_activity_credits">Credits</string>
    <string name="CreditsOpenoise">OpeNoise</string>
    <string name="CreditsOpenoiseText">Version 1.0 - June 2016\nGNU General Public License v.2 or later</string>
    <string name="CreditsDevelopers">Developers</string>
    <string name="CreditsDevelopersText1">Arpa Piemonte\n(Regional Agency for the Protection of the Environment of Piedmont)\nItaly\n<a href="https://www.arpa.piemonte.it/">www.arpa.piemonte.it</a></string>
    <string name="CreditsDevelopersText2">Istituto Superiore Mario Boella\nItaly\n<a href="https://www.ismb.it/">www.ismb.it</a></string>
    <string name="CreditsContacts">Contacts</string>
    <string name="CreditsContactsText">openoise@arpa.piemonte.it\n\n</string>
</resources>
