<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <LinearLayout
                android:id="@+id/info_layout_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="0dp"
                android:orientation="vertical"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginTop="20dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/CreditsOpenoise"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_launcher"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/CreditsOpenoiseText"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/CreditsDevelopers"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:src="@mipmap/ic_arpa"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:id="@+id/created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/CreditsDevelopersText1"
                    android:gravity="center"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"
                    android:src="@mipmap/ic_boella"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/CreditsDevelopersText2"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/CreditsContacts"
                    android:autoLink="web"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/CreditsContactsText"
                    />

            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</LinearLayout>
